# edgetech2025-worker-assist

EdgeTech2025_DigitalTwin/: .eslintrc.js  .gitignore  PERFORMANCE_OPTIMIZATION_SUMMARY.md  jest.config.js  package-lock.json  package.json  tsconfig.json  validate-setup.js  validate-setup.sh  webpack.config.js
EdgeTech2025_DigitalTwin/src/__tests__/: ConnectionMonitor.test.tsx  DataProcessor.test.ts  EfficiencyIndicator.test.tsx  EfficiencyManager.test.tsx  LiveVideoDisplay.test.tsx  NotificationSystem.test.tsx  ProgressChart.test.tsx  RobotCommandManager.test.ts  RobotControlPanel.test.tsx  StatsDashboard.test.tsx  StatusIndicator.test.tsx  ThresholdSettings.test.tsx  TimelineAndStats.test.tsx  TimelineChart.test.tsx  WebSocketManager.test.ts  WebSocketService.test.ts  WorkDataStore.test.ts  WorkStepDisplay.test.tsx  e2e-integration.test.ts  integration-performance.test.ts  progressManager.test.ts  project-structure.test.ts  responsive-layout.test.tsx  setup.ts  validation.test.ts  websocket-data-integration.test.ts  workStepManager.test.ts
EdgeTech2025_DigitalTwin/src/examples/: websocket-integration-example.ts
EdgeTech2025_DigitalTwin/src/main/: main.ts
EdgeTech2025_WsServer/: .gitignore  DEPLOYMENT.md  LOAD_TEST_QUICKSTART.md  PERFORMANCE_TEST_QUICKSTART.md  PROJECT_SETUP.md  README.md  SYSTEMD_TEST_QUICKSTART.md  jest.config.js  package-lock.json  package.json  raspberry-pi-websocket-server-README.md  raspberry-pi-websocket-server.service
EdgeTech2025_WsServer/config/: config.template.json
EdgeTech2025_WsServer/docs/: LOAD_TEST_RESULTS.md  PERFORMANCE_OPTIMIZATION.md  RASPI_PERFORMANCE_TEST.md  SYSTEMD_SERVICE_TEST.md  TASK_13_SUMMARY.md  TASK_14.1_SUMMARY.md  TASK_14.3_SUMMARY.md  TASK_14.4_SUMMARY.md
EdgeTech2025_WsServer/scripts/: README_LOAD_TEST.md  deploy.sh  install-service.sh  load-test.js  quick-deploy.sh  raspi-performance-test.js  setup-raspi.sh  test-systemd-service.sh  verify-async.js  verify-systemd-setup.sh
EdgeTech2025_WsServer/sensorApp_samples/: README.md  SENSOR_APP_SPECIFICATION.md
EdgeTech2025_WsServer/sensorApp_samples/cpp/: CMakeLists.txt  README.md  sensor_app.cpp
EdgeTech2025_WsServer/src/: index.ts
EdgeTech2025_client/: .eslintrc.js  .gitignore  PACKAGING_SUMMARY.md  README.md  ROSBRIDGE_INTEGRATION.md  build.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  webpack.config.js
EdgeTech2025_client/docker/: Dockerfile.build  docker-compose.build.yml
EdgeTech2025_client/docs/: DEPLOYMENT.md
EdgeTech2025_client/sample_data/: ws_if_sample.txt
EdgeTech2025_client/scripts/: build.js  package.js  release.js  validate-build.js
EdgeTech2025_client/src/main/: main.ts  (+10 more)
EdgeTech2025_client/tests/: setup.ts
crane_demo/crane_demo/: CMakeLists.txt  README.md  package.xml
crane_demo/crane_ros_websoket/: craneV2_ros_websocket.py  rosbridge_client_craneV2_single_publish.py  status_subscriber.py
crane_plus/crane_plus_examples/: LAUNCH_GUIDE.md  README_websocket.md  requirements.txt
twin-gateway-rosbridge/: Dockerfile  README.md  entrypoint.sh
twin-gateway-rosbridge/digital_twin_ws/src/twin_bridge/: CMakeLists.txt  package.xml  package.xml.bak  setup.cfg  setup.py
twin-gateway-rosbridge/digital_twin_ws/src/twin_bridge/msg/: DetectedObject.msg  DetectedObjects.msg  GripperStatusMsg.msg  PickandPlaceMsg.msg
twin-gateway-rosbridge/digital_twin_ws/src/twin_bridge/scripts/: service_server.py
twin-gateway-rosbridge/rosbridge_test_code_python/: Dockerfile  README.md
(+123 files in other folders)
